Fix overflow table bug

--- a/public/resources/css/user/user-landing-page.css
+++ b/public/resources/css/user/user-landing-page.css
@@ -45,7 +45,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom:7%;
+    margin-bottom:3%;
 
 }
 #notification-button{
@@ -123,7 +123,9 @@
     border: 1px solid black;
     margin:2px;
     text-align: center;
+    max-height: 100px;
 }
+/* max-height its just for showof  */
 .header-items, .body-items{
     display:flex;
     flex-direction:column;
